# contracts-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: auto_maintenance.yml  ci.yml
backend/: requirements.txt
backend/app/: main.py
docs/: MIGRATION.md  PROJECT_STATE.yaml
extractors/: __init__.py  dummy.py
frontend/: requirements.txt
legacy/: CHANGELOG.md  DEV_NOTES_EN.md  FIX_REPORT.md  README_EN.md  fix_try.py  fix_try_block.py  pytest.ini  repair_ui_streamlit.py  requirements.txt  run_tests.bat  run_tests.sh  run_ui.bat
legacy/app/: ui_streamlit.py  ui_streamlit.py.bak_move_pipeline_20250831_192148  ui_streamlit.py.full_backup_before_repair.bak  ui_streamlit.py.pre_append_except.bak  ui_streamlit.py.pre_block_fix.bak  ui_streamlit.py.pre_fix_nameerror_file.bak  ui_streamlit.py.pre_fix_orphan_except.bak  ui_streamlit.py.pre_fix_safe_run.bak  ui_streamlit.py.pre_func_replace.bak  ui_streamlit.py.pre_remove_return289.bak  ui_streamlit.py.pre_strip_slash1.bak  ui_streamlit.py.pre_strip_top_return.bak  ui_streamlit.py.pre_syntax_fix.bak  ui_streamlit.py.pre_tables_fix.bak
legacy/core/: contract_schema.py  registry.py  schemas.py  utils.py
legacy/docs/: extractors_legal_fix.md
legacy/extractors/: base.py  contacts.py  dates.py  dates.py.de  ids.py  indexation_credits.py  legal.py  legal.py.bak  legal_deep.py  lexicon.py  money.py  obligations_liability.py  parties.py  parts_extra.py  payment.py  pricing.py  sla.py  (+8 more)
pipeline/: export.py
scripts/: auto_update.py  require_changelog.py
(+76 files in other folders)
