[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","S","W"]
ignore = ["E203","E501"]
fix = true
src = ["backend/app","frontend"]
extend-exclude = ["data/","docs/"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
python_files = ["test_*.py","*_test.py"]
addopts = "-q"
testpaths = ["backend/tests"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
